--- a/cheapest_route_algo/package.json
+++ b/cheapest_route_algo/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "version": "1.0.0",
   "devDependencies": {
-    "axios": "^1.5.0"
+    "axios": "^1.5.0",
+    "jsdom": "^22.1.0"
   }
 }
